--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "wouter": "^2.8.0-alpha.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
